--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   "engines": {
     "node": ">=18"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.2",
+    "uuid": "^9.0.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5"
+  }
 }
