--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "uuid": "^9.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "pg": "^8.11.5"
   }
 }
