--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha"
   },
   "engines": {
     "node": ">=18"
@@ -16,5 +17,8 @@
     "cors": "^2.8.5",
     "nodemailer": "^6.9.4",
     "pg": "^8.11.5"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0"
   }
 }
